--- a/Cucu_Cosmin_Lab7/ListPage.xaml
+++ b/Cucu_Cosmin_Lab7/ListPage.xaml
@@ -2,11 +2,18 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cucu_Cosmin_Lab7.ListPage"
+             xmlns:local="clr-namespace:Cucu_Cosmin_Lab7"
              Title="ListPage">
     <StackLayout Margin="20">
         <Editor Placeholder="Enter the description of the shopping list"
  Text="{Binding Description}"
- HeightRequest="100" />
+ HeightRequest="50" >
+        
+        <Editor.Behaviors>
+            <local:ValidationBehaviour />
+        </Editor.Behaviors>
+        </Editor>
+    
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -17,6 +24,14 @@
             <Button Grid.Column="1"
  Text="Delete"
  Clicked="OnDeleteButtonClicked"/>
+            <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
         </Grid>
+        <ListView x:Name="listView" Margin="20">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Detail="{Binding Description}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackLayout>
 </ContentPage>
