--- a/Cucu_Cosmin_Lab7/ListPage.xaml
+++ b/Cucu_Cosmin_Lab7/ListPage.xaml
@@ -2,18 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cucu_Cosmin_Lab7.ListPage"
-             xmlns:local="clr-namespace:Cucu_Cosmin_Lab7"
-             Title="ListPage">
+             Title="ListPage"
+             xmlns:local="clr-namespace:Cucu_Cosmin_Lab7">
     <StackLayout Margin="20">
         <Editor Placeholder="Enter the description of the shopping list"
  Text="{Binding Description}"
- HeightRequest="50" >
-        
-        <Editor.Behaviors>
-            <local:ValidationBehaviour />
-        </Editor.Behaviors>
+ HeightRequest="50">
+            <Editor.Behaviors>
+                <local:ValidationBehaviour />
+            </Editor.Behaviors>
         </Editor>
-    
+
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -24,14 +23,16 @@
             <Button Grid.Column="1"
  Text="Delete"
  Clicked="OnDeleteButtonClicked"/>
-            <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
         </Grid>
-        <ListView x:Name="listView" Margin="20">
+        <ListView x:Name="listView"
+                Margin="20">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextCell Detail="{Binding Description}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
+        Clicked="OnChooseButtonClicked"/>
     </StackLayout>
 </ContentPage>
